# dolphie

./: .gitignore  Dockerfile  README.md  app.py  dolphie  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: main.yml
dolphie/: App.py  DataTypes.py  Database.py  Dolphie.css  Dolphie.py  Dolphie.tcss  Functions.py  Grapher.py  KBHit.py  ManualException.py  MetricManager.py  MySQL.py  QPSManager.py  Queries.py  __init__.py  app.py  dolphie.css
dolphie/Modules/: ArgumentParser.py  CommandManager.py  CommandPalette.py  Functions.py  KeyEventManager.py  ManualException.py  MetricManager.py  MySQL.py  PerformanceSchemaMetrics.py  Queries.py  ReplayManager.py  StatementsSummaryMetrics.py  TabManager.py  WorkerDataProcessor.py  WorkerManager.py
dolphie/Panels/: DDL.py  Dashboard.py  MetadataLocks.py  PerformanceSchemaMetrics.py  Processlist.py  ProxySQLCommandStats.py  ProxySQLDashboard.py  ProxySQLHostgroupSummary.py  ProxySQLProcesslist.py  ProxySQLQueryRules.py  Replication.py  StatementsSummaryMetrics.py  dashboard_panel.py  ddl_panel.py  dml_panel.py  innodb_io_panel.py  innodb_locks_panel.py  innodb_panel.py  innodb_trx_locks_panel.py  locks_panel.py  metadata_locks_panel.py  performance_schema_metrics_panel.py  processlist_panel.py  proxysql_command_stats_panel.py  proxysql_dashboard_panel.py  proxysql_hostgroup_summary_panel.py  proxysql_mysql_query_rules_panel.py  proxysql_processlist_panel.py  query_panel.py  replica_panel.py  replication_panel.py  top_queries_panel.py
dolphie/Widgets/: AutoComplete.py  CommandModal.py  CommandScreen.py  EventLogScreen.py  ProxySQLThreadScreen.py  SpinnerWidget.py  TabSetupModal.py  ThreadScreen.py  TopBar.py  autocomplete.py  command_screen.py  event_log.py  event_log_screen.py  filter_modal.py  help.py  host_setup.py  infoscreen.py  modal.py  new_version_modal.py  popup.py  proxysql_thread_screen.py  quick_switch.py  spinner.py  tab_setup.py  thread_screen.py  topbar.py
examples/: dolphie-daemon.cnf  dolphie.service
tests/dolphie/Modules/: test_PerformanceSchemaMetrics.py
