[tool.poetry]
name = "dolphie"
version = "6.10.1"
license = "GPL-3.0-or-later"
description = "Your single pane of glass for real-time analytics into MySQL/MariaDB & ProxySQL"
authors = ["Charles Thompson <01charles.t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
rich = "^14.0.0"
pymysql = "^1.1.1"
myloginpath = "^0.0.4"
packaging = "^25.0"
requests = "^2.32.3"
sqlparse = "^0.5.3"
textual = {extras = ["syntax"], version = "^3.2.0"}
plotext = "^5.3.2"
zstandard = "^0.23.0"
loguru = "^0.7.3"
orjson = "^3.10.15"
psutil = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dolphie = "dolphie.App:main"
